fix api status response, add func check enum when call api register account
