# middleware/authorization.go
@@ -1,0 +1,9 @@
+package middleware
+
+import "net/http"
+
+func AuthorizationMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		next.ServeHTTP(w, r)
+	})
+}
