# service/account_services/controller/router.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"github.com/PhuPhuoc/hrm-v1/middleware"
 	"github.com/PhuPhuoc/hrm-v1/model/account"
 	"github.com/gorilla/mux"
 )
@@ -16,7 +17,11 @@ func NewAccooutController(s account.AccountStore) *accountController {
 }
 
 func (c *accountController) RegisterAccountRouter(r *mux.Router) {
+
 	r.HandleFunc("/register", c.handleAccountRegister).Methods("POST")
 	r.HandleFunc("/login", c.handleAccountLogin).Methods("POST")
 
+	account_management_router := r.PathPrefix("/account").Subrouter()
+	account_management_router.Use(middleware.AuthorizationMiddleware)
+	account_management_router.HandleFunc("/", c.handleGetAllAccount).Methods("GET")
 }
